<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/age"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_stats" />

    <TextView
        android:id="@+id/height"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <TextView
        android:id="@+id/country"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <TextView
        android:id="@+id/major"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/major"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <TextView
        android:id="@+id/student_profile_header"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/student_profile"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/student_profile_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_header"
        tools:src="@tools:sample/avatars[11]" />

    <TextView
        android:id="@+id/fname"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="31dp"
        android:text="@string/fname"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_header" />

    <TextView
        android:id="@+id/lname"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="31dp"
        android:text="@string/lname"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintStart_toEndOf="@+id/fname"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_header" />

    <TextView
        android:id="@+id/college"
        android:layout_width="243dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/college"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/fname" />

    <TextView
        android:id="@+id/location"
        android:layout_width="243dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/location"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/college" />

    <TextView
        android:id="@+id/tennis_stats"
        android:layout_width="127dp"
        android:layout_height="34dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="@string/tennis_stats"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/personal_stats"
        android:layout_width="127dp"
        android:layout_height="34dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/personal_stats"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="10dp"
        android:layout_height="346dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/utr_rank"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/utr_rank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tennis_stats" />

    <TextView
        android:id="@+id/atp_points"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/atp_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/utr_rank" />

    <TextView
        android:id="@+id/teams"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/teams"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atp_points" />

    <TextView
        android:id="@+id/recruit_video"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/recruit_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teams" />

</androidx.constraintlayout.widget.ConstraintLayout>