<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/ranking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/team_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/coach_profile_header3"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="27dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/coach_profile"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/lname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coach_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="518dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lname"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coach_profile_header3"
        tools:src="@tools:sample/avatars[7]" />

    <TextView
        android:id="@+id/lname"
        android:layout_width="102dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="142dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/lastname"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coach_profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/coach_profile_header3"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/Cfname"
        android:layout_width="102dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:text="@string/fname"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintStart_toEndOf="@+id/lname"
        app:layout_constraintTop_toBottomOf="@+id/coach_profile_header3" />

    <TextView
        android:id="@+id/position"
        android:layout_width="232dp"
        android:layout_height="37dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:text="@string/position_tittle"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coach_profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/lname" />

    <TextView
        android:id="@+id/college"
        android:layout_width="232dp"
        android:layout_height="36dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:text="@string/college_institution"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coach_profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/position" />

    <TextView
        android:id="@+id/experience"
        android:layout_width="386dp"
        android:layout_height="111dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:text="@string/experience_stats"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/college" />

    <View
        android:id="@+id/divider"
        android:layout_width="8dp"
        android:layout_height="263dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="116dp"
        android:layout_height="24dp"
        android:layout_marginTop="42dp"
        android:text="@string/team_info"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experience"
        tools:text="TEAM " />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="116dp"
        android:layout_height="24dp"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/college_info"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/experience" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/roster_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"
        android:text="@string/college_website"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="12dp"
        android:text="@string/college_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="184dp"
        android:layout_height="26dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="12dp"
        android:text="@string/college_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

</androidx.constraintlayout.widget.ConstraintLayout>
